failing compilation due to null check